--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,18 +18,20 @@
 </head>
 
 <body>
-    <header class="menu-container">
-        <a class="menu-logo" href="./index.html">Web<span class="menu-logo-title">Studio</span></a>
-        <nav class="menu-nav">
-            <ul>
-                <li> <a class="menu-nav-link" href="./index.html">Agencja</a></li>
-                <li> <a class="menu-nav-link" href="./portfolio.html">Portfolio</a></li>
-                <li> <a class="menu-nav-link" href="./index.html">Kontakt</a></li>
-            </ul>
-        </nav>
-        <div class="menu-contacts">
-            <a class="menu-contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="menu-contact-link" href="tel:+48111111111">+48 111 111 111</a>
+    <header class="header-line">
+        <div class="menu-container container">
+            <nav class="menu-nav">
+                <a class="menu-logo" href="./index.html">Web<span class="menu-logo-title">Studio</span></a>
+                <ul class="menu-nav-list">
+                    <li class="menu-nav-item"> <a class="menu-nav-link" href="./index.html">Agencja</a></li>
+                    <li class="menu-nav-item"> <a class="menu-nav-link" href="./portfolio.html">Portfolio</a></li>
+                    <li class="menu-nav-item"> <a class="menu-nav-link" href="./index.html">Kontakt</a></li>
+                </ul>
+            </nav>
+            <div class="menu-contacts">
+                <a class="menu-contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="menu-contact-link" href="tel:+48111111111">+48 111 111 111</a>
+            </div>
         </div>
     </header>
 
@@ -119,16 +124,18 @@
     </main>
 
     <footer>
-        <a class="footer-logo" href="./index.html">Web<span class="footer-logo-title">Studio</span></a>
-        <address class="footer-adress-list">
-            <ul>
-                <li><a class="footer-adress" href="https://goo.gl/maps/d49CJBmiLWtHoX3f7" target="_blank"
-                        rel="noreferrer noopener nofollow">
-                        Warszawa, Aleje Jerozolimskie 21 </a></li>
-                <li><a class="footer-contacts" href="mailto:info@example.com">info@example.com</a></li>
-                <li><a class="footer-contacts" href="tel:+48111111111">+48 111 111 111</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <a class="footer-logo" href="./index.html">Web<span class="footer-logo-title">Studio</span></a>
+            <address class="footer-adress-list">
+                <ul class="footer-contacts">
+                    <li class="footer-item"><a class="footer-adress" href="https://goo.gl/maps/d49CJBmiLWtHoX3f7" target="_blank"
+                            rel="noreferrer noopener nofollow">
+                            Warszawa, Aleje Jerozolimskie 21 </a></li>
+                    <li class="footer-item"><a class="footer-contact" href="mailto:info@example.com">info@example.com</a></li>
+                    <li class="footer-item"><a class="footer-contact" href="tel:+48111111111">+48 111 111 111</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 
 </body>
