--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio-Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,113 +18,115 @@
 </head>
 
 <body>
-    <header class="menu-container">
-        <a class="menu-logo" href="./index.html">Web<span class="menu-logo-title">Studio</span></a>
-        <nav class="menu-nav">
-            <ul>
-                <li> <a class="menu-nav-link" href="./index.html">Agencja</a></li>
-                <li> <a class="menu-nav-link" href="./portfolio.html">Portfolio</a></li>
-                <li> <a class="menu-nav-link" href="./index.html">Kontakt</a></li>
-            </ul>
-        </nav>
-        <div class="menu-contacts">
-            <a class="menu-contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="menu-contact-link" href="tel:+48111111111">+48 111 111 111</a>
+    <header class="header-line">
+        <div class="menu-container container">
+            <nav class="menu-nav">
+                <a class="menu-logo" href="./index.html">Web<span class="menu-logo-title">Studio</span></a>
+                <ul class="menu-nav-list">
+                    <li class="menu-nav-item"> <a class="menu-nav-link" href="./index.html">Agencja</a></li>
+                    <li class="menu-nav-item"> <a class="menu-nav-link" href="./portfolio.html">Portfolio</a></li>
+                    <li class="menu-nav-item"> <a class="menu-nav-link" href="./index.html">Kontakt</a></li>
+                </ul>
+            </nav>
+            <div class="menu-contacts">
+                <a class="menu-contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="menu-contact-link" href="tel:+48111111111">+48 111 111 111</a>
+            </div>
         </div>
     </header>
 
     <main>
-        <section class="portfolio-img">
+        <section class="portfolio-img container">
             <h2 class="hidden">portfolio images</h2>
             <ul class="button-nav">
-                <li>
+                <li class="button-item">
                     <button type="button">Wszystkie</button>
                 </li>
-                <li>
+                <li class="button-item">
                     <button type="button">Strony</button>
                 </li>
-                <li>
+                <li class="button-item">
                     <button type="button">Aplikacje</button>
                 </li>
-                <li>
+                <li class="button-item">
                     <button type="button">Dizajn</button>
                 </li>
-                <li>
+                <li class="button-item">
                     <button type="button">Marketing</button>
                 </li>
             </ul>
-            <ul class="portfolio-img-containers">
-                <li>
+            <ul class="portfolio-img-containers container">
+                <li class="portfolio-img-item">
                     <figure><img src="./images/portfolio-img-9.jpg" alt="technocrack" width="370" height="294" />
-                        <figcaption>
+                        <figcaption class="figcaption-item">
                             <p class="portfolio-img-title">Technocrack</p>
                             <p class="portfolio-img-text">Strona internetowa</p>
                         </figcaption>
                     </figure>
                 </li>
-                <li>
+                <li class="portfolio-img-item">
                     <figure><img src="./images/portfolio-img-8.jpg" alt="Grafika New Orlean vs Golden Star" width="370"
                             height="294" />
-                        <figcaption>
+                        <figcaption class="figcaption-item">
                             <p class="portfolio-img-title">Grafika New Orlean vs Golden Star</p>
                             <p class="portfolio-img-text">Dizajn</p>
                         </figcaption>
                     </figure>
                 </li>
-                <li>
+                <li class="portfolio-img-item">
                     <figure><img src="./images/portfolio-img-7.jpg" alt="Restauracja Seafood" width="370"
                             height="294" />
-                        <figcaption>
+                        <figcaption class="figcaption-item">
                             <p class="portfolio-img-title">Restauracja Seafood</p>
                             <p class="portfolio-img-text">Aplikacja</p>
                         </figcaption>
                     </figure>
                 </li>
-                <li>
+                <li class="portfolio-img-item">
                     <figure><img src="./images/portfolio-img-6.jpg" alt="Projekt Prime" width="370" height="294" />
-                        <figcaption>
+                        <figcaption class="figcaption-item">
                             <p class="portfolio-img-title">Projekt Prime</p>
                             <p class="portfolio-img-text">Marketing</p>
                         </figcaption>
                     </figure>
                 </li>
-                <li>
+                <li class="portfolio-img-item">
                     <figure><img src="./images/portfolio-img-5.jpg" alt="Projekt Boxes" width="370" height="294" />
-                        <figcaption>
+                        <figcaption class="figcaption-item">
                             <p class="portfolio-img-title">Projekt Boxes</p>
                             <p class="portfolio-img-text">Aplikacja</p>
                         </figcaption>
                     </figure>
                 </li>
-                <li>
+                <li class="portfolio-img-item">
                     <figure><img src="./images/portfolio-img-4.jpg" alt="Inspiration has no Borders" width="370"
                             height="294" />
-                        <figcaption>
+                        <figcaption class="figcaption-item">
                             <p class="portfolio-img-title">Inspiration has no Borders</p>
                             <p class="portfolio-img-text">Strona internetowa</p>
                         </figcaption>
                     </figure>
                 </li>
-                <li>
+                <li class="portfolio-img-item">
                     <figure><img src="./images/portfolio-img-3.jpg" alt="Magazyn Limited Edition" width="370"
                             height="294" />
-                        <figcaption>
+                        <figcaption class="figcaption-item">
                             <p class="portfolio-img-title">Magazyn Limited Edition</p>
                             <p class="portfolio-img-text">Dizajn</p>
                         </figcaption>
                     </figure>
                 </li>
-                <li>
+                <li class="portfolio-img-item">
                     <figure><img src="./images/portfolio-img-2.jpg" alt="Projekt LAB" width="370" height="294" />
-                        <figcaption>
+                        <figcaption class="figcaption-item">
                             <p class="portfolio-img-title">Projekt LAB</p>
                             <p class="portfolio-img-text">Marketing</p>
                         </figcaption>
                     </figure>
                 </li>
-                <li>
+                <li class="portfolio-img-item">
                     <figure><img src="./images/portfolio-img.jpg" alt="Growing Business" width="370" height="294" />
-                        <figcaption>
+                        <figcaption class="figcaption-item">
                             <p class="portfolio-img-title">Growing Business</p>
                             <p class="portfolio-img-text">Aplikacja</p>
                         </figcaption>
@@ -132,16 +137,20 @@
     </main>
 
     <footer>
-        <a class="footer-logo" href="./index.html">Web<span class="footer-logo-title">Studio</span></a>
-        <address class="footer-adress-list">
-            <ul>
-                <li><a class="footer-adress" href="https://goo.gl/maps/d49CJBmiLWtHoX3f7" target="_blank"
-                        rel="noreferrer noopener nofollow">
-                        Warszawa, Aleje Jerozolimskie 21 </a></li>
-                <li><a class="footer-contacts" href="mailto:info@example.com">info@example.com</a></li>
-                <li><a class="footer-contacts" href="tel:+48111111111">+48 111 111 111</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <a class="footer-logo" href="./index.html">Web<span class="footer-logo-title">Studio</span></a>
+            <address class="footer-adress-list">
+                <ul class="footer-contacts">
+                    <li class="footer-item"><a class="footer-adress" href="https://goo.gl/maps/d49CJBmiLWtHoX3f7"
+                            target="_blank" rel="noreferrer noopener nofollow">
+                            Warszawa, Aleje Jerozolimskie 21 </a></li>
+                    <li class="footer-item"><a class="footer-contact"
+                            href="mailto:info@example.com">info@example.com</a>
+                    </li>
+                    <li class="footer-item"><a class="footer-contact" href="tel:+48111111111">+48 111 111 111</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
