--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <button class="hero-button" type="button">Zamów usługe</button>
             </div>
         </section>
-        <section class="features">
+        <section class="features container">
             <h2 class="hidden">features</h2>
             <ul class="features-list">
                 <li>
@@ -68,14 +68,14 @@
             </ul>
         </section>
         <section>
-            <div class="about">
+            <div class="about container">
                 <h2 class="about-title">Czym się zajmujemy</h2>
                 <ul>
-                    <li><img src="./images/img-5.jpg" alt="dłonie męzczyzny na klawiaturze komputera" width="370"
+                    <li class="about-item"><img src="./images/img-5.jpg" alt="dłonie męzczyzny na klawiaturze komputera" width="370"
                             height="294" /></li>
-                    <li><img src="./images/img-6.jpg" alt="ręka trzyma telefon nad laptopem" width="370" height="294" />
+                    <li class="about-item"><img src="./images/img-6.jpg" alt="ręka trzyma telefon nad laptopem" width="370" height="294" />
                     </li>
-                    <li><img src="./images/img-7.jpg" alt="ręka trzyma tablet nad klawiaturą komputera" width="370"
+                    <li class="about-item"><img src="./images/img-7.jpg" alt="ręka trzyma tablet nad klawiaturą komputera" width="370"
                             height="294" /></li>
                 </ul>
             </div>
@@ -85,7 +85,7 @@
             <div class="team">
                 <h2 class="team-title">Nasz zespół</h2>
                 <ul class="team-list">
-                    <li>
+                    <li class="team-item">
                         <figure><img src="./images/img.jpg" alt="John Doe, Product Designer" width="270" height="260" />
                             <figcaption>
                                 <p class="team-list-name">John Doe</p>
@@ -93,7 +93,7 @@
                             </figcaption>
                         </figure>
                     </li>
-                    <li>
+                    <li class="team-item">
                         <figure><img src="./images/img-2.jpg" alt="John Doe, Frontend Developer" width="270"
                                 height="260" />
                             <figcaption>
@@ -102,7 +102,7 @@
                             </figcaption>
                         </figure>
                     </li>
-                    <li>
+                    <li class="team-item">
                         <figure><img src="./images/img-3.jpg" alt="John Doe, Marketing" width="270" height="260" />
                             <figcaption>
                                 <p class="team-list-name">John Doe</p>
@@ -110,7 +110,7 @@
                             </figcaption>
                         </figure>
                     </li>
-                    <li>
+                    <li class="team-item">
                         <figure><img src="./images/img-4.jpg" alt="John Doe, UI Designer" width="270" height="260" />
                             <figcaption>
                                 <p class="team-list-name">John Doe</p>
