--- a/portfolio.html
+++ b/portfolio.html
@@ -28,15 +28,17 @@
                     <li class="menu-nav-item"> <a class="menu-nav-link" href="./index.html">Kontakt</a></li>
                 </ul>
             </nav>
-            <div class="menu-contacts">
-                <a class="menu-contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a class="menu-contact-link" href="tel:+48111111111">+48 111 111 111</a>
-            </div>
+            <ul class="menu-contacts">
+                <li class="menu-contact-item"><a class="menu-contact-link"
+                        href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="menu-contact-item"><a class="menu-contact-link" href="tel:+48111111111">+48 111 111 111</a>
+                </li>
+            </ul>
         </div>
     </header>
 
     <main>
-        <section class="portfolio-img container">
+        <section class="portfolio-img container section">
             <h2 class="hidden">portfolio images</h2>
             <ul class="button-nav">
                 <li class="button-item">
@@ -55,9 +57,10 @@
                     <button type="button">Marketing</button>
                 </li>
             </ul>
-            <ul class="portfolio-img-containers container">
+            <ul class="portfolio-img-containers">
                 <li class="portfolio-img-item">
-                    <figure><img src="./images/portfolio-img-9.jpg" alt="technocrack" width="370" height="294" />
+                    <figure><img class="img-item" src="./images/portfolio-img-9.jpg" alt="technocrack" width="370"
+                            height="294" />
                         <figcaption class="figcaption-item">
                             <p class="portfolio-img-title">Technocrack</p>
                             <p class="portfolio-img-text">Strona internetowa</p>
@@ -65,8 +68,8 @@
                     </figure>
                 </li>
                 <li class="portfolio-img-item">
-                    <figure><img src="./images/portfolio-img-8.jpg" alt="Grafika New Orlean vs Golden Star" width="370"
-                            height="294" />
+                    <figure><img class="img-item" src="./images/portfolio-img-8.jpg"
+                            alt="Grafika New Orlean vs Golden Star" width="370" height="294" />
                         <figcaption class="figcaption-item">
                             <p class="portfolio-img-title">Grafika New Orlean vs Golden Star</p>
                             <p class="portfolio-img-text">Dizajn</p>
@@ -74,8 +77,8 @@
                     </figure>
                 </li>
                 <li class="portfolio-img-item">
-                    <figure><img src="./images/portfolio-img-7.jpg" alt="Restauracja Seafood" width="370"
-                            height="294" />
+                    <figure><img class="img-item" src="./images/portfolio-img-7.jpg" alt="Restauracja Seafood"
+                            width="370" height="294" />
                         <figcaption class="figcaption-item">
                             <p class="portfolio-img-title">Restauracja Seafood</p>
                             <p class="portfolio-img-text">Aplikacja</p>
@@ -83,7 +86,8 @@
                     </figure>
                 </li>
                 <li class="portfolio-img-item">
-                    <figure><img src="./images/portfolio-img-6.jpg" alt="Projekt Prime" width="370" height="294" />
+                    <figure><img class="img-item" src="./images/portfolio-img-6.jpg" alt="Projekt Prime" width="370"
+                            height="294" />
                         <figcaption class="figcaption-item">
                             <p class="portfolio-img-title">Projekt Prime</p>
                             <p class="portfolio-img-text">Marketing</p>
@@ -91,7 +95,8 @@
                     </figure>
                 </li>
                 <li class="portfolio-img-item">
-                    <figure><img src="./images/portfolio-img-5.jpg" alt="Projekt Boxes" width="370" height="294" />
+                    <figure><img class="img-item" src="./images/portfolio-img-5.jpg" alt="Projekt Boxes" width="370"
+                            height="294" />
                         <figcaption class="figcaption-item">
                             <p class="portfolio-img-title">Projekt Boxes</p>
                             <p class="portfolio-img-text">Aplikacja</p>
@@ -99,8 +104,8 @@
                     </figure>
                 </li>
                 <li class="portfolio-img-item">
-                    <figure><img src="./images/portfolio-img-4.jpg" alt="Inspiration has no Borders" width="370"
-                            height="294" />
+                    <figure><img class="img-item" src="./images/portfolio-img-4.jpg" alt="Inspiration has no Borders"
+                            width="370" height="294" />
                         <figcaption class="figcaption-item">
                             <p class="portfolio-img-title">Inspiration has no Borders</p>
                             <p class="portfolio-img-text">Strona internetowa</p>
@@ -108,8 +113,8 @@
                     </figure>
                 </li>
                 <li class="portfolio-img-item">
-                    <figure><img src="./images/portfolio-img-3.jpg" alt="Magazyn Limited Edition" width="370"
-                            height="294" />
+                    <figure><img class="img-item" src="./images/portfolio-img-3.jpg" alt="Magazyn Limited Edition"
+                            width="370" height="294" />
                         <figcaption class="figcaption-item">
                             <p class="portfolio-img-title">Magazyn Limited Edition</p>
                             <p class="portfolio-img-text">Dizajn</p>
@@ -117,7 +122,8 @@
                     </figure>
                 </li>
                 <li class="portfolio-img-item">
-                    <figure><img src="./images/portfolio-img-2.jpg" alt="Projekt LAB" width="370" height="294" />
+                    <figure><img class="img-item" src="./images/portfolio-img-2.jpg" alt="Projekt LAB" width="370"
+                            height="294" />
                         <figcaption class="figcaption-item">
                             <p class="portfolio-img-title">Projekt LAB</p>
                             <p class="portfolio-img-text">Marketing</p>
@@ -125,7 +131,8 @@
                     </figure>
                 </li>
                 <li class="portfolio-img-item">
-                    <figure><img src="./images/portfolio-img.jpg" alt="Growing Business" width="370" height="294" />
+                    <figure><img class="img-item" src="./images/portfolio-img.jpg" alt="Growing Business" width="370"
+                            height="294" />
                         <figcaption class="figcaption-item">
                             <p class="portfolio-img-title">Growing Business</p>
                             <p class="portfolio-img-text">Aplikacja</p>
