--- a/index.html
+++ b/index.html
@@ -28,91 +28,97 @@
                     <li class="menu-nav-item"> <a class="menu-nav-link" href="./index.html">Kontakt</a></li>
                 </ul>
             </nav>
-            <div class="menu-contacts">
-                <a class="menu-contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a class="menu-contact-link" href="tel:+48111111111">+48 111 111 111</a>
-            </div>
+            <ul class="menu-contacts">
+                <li class="menu-contact-item"><a class="menu-contact-link"
+                        href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="menu-contact-item"><a class="menu-contact-link" href="tel:+48111111111">+48 111 111 111</a>
+                </li>
+            </ul>
         </div>
     </header>
 
     <main>
-        <section class="hero-container">
+        <section class="hero-container section">
             <div class="hero">
                 <h1 class="hero-title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
                 <button class="hero-button" type="button">Zamów usługe</button>
             </div>
         </section>
-        <section class="features container">
+        <section class="features container section">
             <h2 class="hidden">features</h2>
             <ul class="features-list">
-                <li>
+                <li class="features-item">
                     <h3 class="features-title">LOREM IPSUM</h3>
                     <p class="features-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                         arcu sem. Sed non sodales dui. Interdum et malesuada</p>
                 </li>
-                <li>
+                <li class="features-item">
                     <h3 class="features-title">LOREM IPSUM</h3>
                     <p class="features-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                         arcu sem. Sed non sodales dui. Interdum et malesuada</p>
                 </li>
-                <li>
+                <li class="features-item">
                     <h3 class="features-title">LOREM IPSUM</h3>
                     <p class="features-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                         arcu sem. Sed non sodales dui. Interdum et malesuada</p>
                 </li>
-                <li>
+                <li class="features-item">
                     <h3 class="features-title">LOREM IPSUM</h3>
                     <p class="features-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                         arcu sem. Sed non sodales dui. Interdum et malesuada</p>
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="section">
             <div class="about container">
                 <h2 class="about-title">Czym się zajmujemy</h2>
                 <ul>
-                    <li class="about-item"><img src="./images/img-5.jpg" alt="dłonie męzczyzny na klawiaturze komputera" width="370"
-                            height="294" /></li>
-                    <li class="about-item"><img src="./images/img-6.jpg" alt="ręka trzyma telefon nad laptopem" width="370" height="294" />
+                    <li class="about-item"><img src="./images/img-5.jpg" alt="dłonie męzczyzny na klawiaturze komputera"
+                            width="370" height="294" /></li>
+                    <li class="about-item"><img src="./images/img-6.jpg" alt="ręka trzyma telefon nad laptopem"
+                            width="370" height="294" />
                     </li>
-                    <li class="about-item"><img src="./images/img-7.jpg" alt="ręka trzyma tablet nad klawiaturą komputera" width="370"
-                            height="294" /></li>
+                    <li class="about-item"><img src="./images/img-7.jpg"
+                            alt="ręka trzyma tablet nad klawiaturą komputera" width="370" height="294" /></li>
                 </ul>
             </div>
         </section>
 
-        <section>
-            <div class="team">
+        <section class="team section">
+            <div class="team-container container">
                 <h2 class="team-title">Nasz zespół</h2>
                 <ul class="team-list">
                     <li class="team-item">
-                        <figure><img src="./images/img.jpg" alt="John Doe, Product Designer" width="270" height="260" />
-                            <figcaption>
+                        <figure><img class="img-item" src="./images/img.jpg" alt="John Doe, Product Designer"
+                                width="270" height="260" />
+                            <figcaption class="figcaption-team-item">
                                 <p class="team-list-name">John Doe</p>
                                 <p class="team-list-position">Product Designer</p>
                             </figcaption>
                         </figure>
                     </li>
                     <li class="team-item">
-                        <figure><img src="./images/img-2.jpg" alt="John Doe, Frontend Developer" width="270"
-                                height="260" />
-                            <figcaption>
+                        <figure><img class="img-item" src="./images/img-2.jpg" alt="John Doe, Frontend Developer"
+                                width="270" height="260" />
+                            <figcaption class="figcaption-team-item">
                                 <p class="team-list-name">John Doe</p>
                                 <p class="team-list-position">Frontend Developer</p>
                             </figcaption>
                         </figure>
                     </li>
                     <li class="team-item">
-                        <figure><img src="./images/img-3.jpg" alt="John Doe, Marketing" width="270" height="260" />
-                            <figcaption>
+                        <figure><img class="img-item" src="./images/img-3.jpg" alt="John Doe, Marketing" width="270"
+                                height="260" />
+                            <figcaption class="figcaption-team-item">
                                 <p class="team-list-name">John Doe</p>
                                 <p class="team-list-position">Marketing</p>
                             </figcaption>
                         </figure>
                     </li>
                     <li class="team-item">
-                        <figure><img src="./images/img-4.jpg" alt="John Doe, UI Designer" width="270" height="260" />
-                            <figcaption>
+                        <figure><img class="img-item" src="./images/img-4.jpg" alt="John Doe, UI Designer" width="270"
+                                height="260" />
+                            <figcaption class="figcaption-team-item">
                                 <p class="team-list-name">John Doe</p>
                                 <p class="team-list-position">UI Designer</p>
                             </figcaption>
@@ -128,10 +134,11 @@
             <a class="footer-logo" href="./index.html">Web<span class="footer-logo-title">Studio</span></a>
             <address class="footer-adress-list">
                 <ul class="footer-contacts">
-                    <li class="footer-item"><a class="footer-adress" href="https://goo.gl/maps/d49CJBmiLWtHoX3f7" target="_blank"
-                            rel="noreferrer noopener nofollow">
+                    <li class="footer-item"><a class="footer-adress" href="https://goo.gl/maps/d49CJBmiLWtHoX3f7"
+                            target="_blank" rel="noreferrer noopener nofollow">
                             Warszawa, Aleje Jerozolimskie 21 </a></li>
-                    <li class="footer-item"><a class="footer-contact" href="mailto:info@example.com">info@example.com</a></li>
+                    <li class="footer-item"><a class="footer-contact"
+                            href="mailto:info@example.com">info@example.com</a></li>
                     <li class="footer-item"><a class="footer-contact" href="tel:+48111111111">+48 111 111 111</a></li>
                 </ul>
             </address>
