--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </section>
 
         <section class="team section">
-            <div class="team-container container">
+            <div class="container">
                 <h2 class="team-title">Nasz zespół</h2>
                 <ul class="team-list">
                     <li class="team-item">
